--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,11 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+SMSMISR_ENVIRONMENT=2
+SMSMISR_ENDPOINT=https://smsmisr.com/api/OTP
+SMSMISR_USERNAME=
+SMSMISR_PASSWORD=
+SMSMISR_SENDER=
+SMSMISR_LANGUAGE=2
