--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "rollup": "^4.35.0",
         "vite": "^5.0"
     }
 }
